Fix accounting pages + add payroll demo company seed
Accounting fixes (17 pages):
- Remove crashing getElementById calls for non-existent nav elements
- Navigation.js now handles all user display (userName, companyName, userAvatar)
- Fix hardcoded localhost:3000 API URLs to relative /api/accounting
- Remove redundant logout/toggleUserMenu functions (navigation.js handles)
- Fix stray closing braces that caused syntax errors

Payroll additions:
- Add demo company seed (demo-company-seed.js) for all new payroll users
- 5 SA employees, 18 payroll items, PAYE config auto-seeded
- Login page scrolling fix

--- a/Payroll/Payroll_App/company-dashboard.html
+++ b/Payroll/Payroll_App/company-dashboard.html
@@ -562,6 +562,7 @@
     <script src="js/data-access.js"></script>
     <script src="js/permissions.js"></script>
     <script src="js/audit.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/auth.js"></script>
     <script>
         let employees = [];
@@ -576,6 +577,12 @@
             }
 
             currentCompanyId = session.company_id;
+
+            // Auto-seed demo data for new companies on first visit
+            if (typeof DemoCompanySeed !== 'undefined' && !DemoCompanySeed.isSeeded(currentCompanyId)) {
+                DemoCompanySeed.seedForCompany(currentCompanyId);
+            }
+
             loadDashboard();
         });
 
