--- a/Payroll/Payroll_App/login.html
+++ b/Payroll/Payroll_App/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorenco Paytime - Login</title>
     <style>
         * {
@@ -16,9 +16,10 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
-            padding: 20px;
+            padding: 40px 20px;
+            overflow-y: auto;
         }
 
         .container {
@@ -604,6 +605,7 @@
     <script src="js/data-access.js"></script>
     <script src="js/permissions.js"></script>
     <script src="js/audit.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/auth.js"></script>
     <script>
         // Check if already logged in
