--- a/Payroll/Payroll_App/test-suite.html
+++ b/Payroll/Payroll_App/test-suite.html
@@ -114,6 +114,7 @@
     <div id="results"></div>
 
     <script src="js/data-access.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/payroll-engine.js"></script>
     <script>
     // ============================================================
