--- a/accounting-ecosystem/frontend-accounting/company.html
+++ b/accounting-ecosystem/frontend-accounting/company.html
@@ -919,10 +919,7 @@
       }, 5000);
     }
 
-    function logout() {
-      localStorage.removeItem('token');
-      window.location.href = '/';
-    }
+    // Logout handled by navigation.js
 
     // ========== Teach Sean Functions ==========
 
