--- a/accounting-ecosystem/frontend-accounting/paye-reconciliation.html
+++ b/accounting-ecosystem/frontend-accounting/paye-reconciliation.html
@@ -1018,10 +1018,7 @@
       }
     }
 
-    function logout() {
-      localStorage.removeItem('token');
-      window.location.href = '/';
-    }
+    // Logout handled by navigation.js
 
     // Initialize
     init();
