--- a/Payroll/Payroll_App/attendance.html
+++ b/Payroll/Payroll_App/attendance.html
@@ -368,6 +368,7 @@
     <script src="js/data-access.js"></script>
     <script src="js/permissions.js"></script>
     <script src="js/audit.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/auth.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.20.0/package/dist/xlsx.full.min.js"></script>
     <script src="js/attendance.js"></script>
