--- a/Payroll/Payroll_App/company-details.html
+++ b/Payroll/Payroll_App/company-details.html
@@ -409,6 +409,7 @@
     <script src="js/data-access.js"></script>
     <script src="js/permissions.js"></script>
     <script src="js/audit.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/auth.js"></script>
     <script>
         let currentCompanyId = null;
