--- a/Payroll/Payroll_App/employee-detail.html
+++ b/Payroll/Payroll_App/employee-detail.html
@@ -655,6 +655,7 @@
     <script src="js/data-access.js"></script>
     <script src="js/permissions.js"></script>
     <script src="js/audit.js"></script>
+    <script src="js/demo-company-seed.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/payroll-engine.js"></script>
     <script src="js/payroll-items-helper.js"></script>
