--- a/accounting-ecosystem/frontend-accounting/ai-settings.html
+++ b/accounting-ecosystem/frontend-accounting/ai-settings.html
@@ -412,7 +412,7 @@
     </div>
     
     <script>
-        const API_URL = 'http://localhost:3000/api';
+        const API_URL = '/api/accounting';
         const token = localStorage.getItem('token');
         const user = JSON.parse(localStorage.getItem('user') || '{}');
         
