--- a/accounting-ecosystem/frontend-accounting/reports.html
+++ b/accounting-ecosystem/frontend-accounting/reports.html
@@ -562,22 +562,7 @@
             user = mockUser;
         }
 
-        // Display user info
-        const fullName = `${user.firstName || ''} ${user.lastName || ''}`.trim();
-        document.getElementById('userName').textContent = fullName || user.email || 'User';
-        document.getElementById('companyName').textContent = user.companyName || 'Demo Company Ltd';
-
-        const initial = (user.firstName?.[0] || user.email?.[0] || 'U').toUpperCase();
-        document.getElementById('userAvatar').textContent = initial;
-
-        function toggleUserMenu() {
-            const menu = confirm('Logout?');
-            if (menu) {
-                localStorage.removeItem('token');
-                localStorage.removeItem('user');
-                window.location.href = '/';
-            }
-        }
+        // User info display and logout handled by navigation.js
 
         // ===================================
         // PROFIT & LOSS FUNCTIONS
